--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Crimes</title>
 <script type="text/javascript"
 	src="https://www.gstatic.com/charts/loader.js"></script>
@@ -72,7 +73,14 @@
 
 		<!-- 	div partie google chart , est affiché quand on clic sur le tableau de bord -->
 
-		<div id="choixUser"></div>
+		<div id="choixUser">
+		
+<!-- 		<div id ="dashboard_div" > -->
+		
+			<div style="margin-top: 100px; text-align: center;" id = "filter_div"></div>
+			<div id = "chart_div"></div>
+			</div>
+<!-- 		</div> -->
 
 		<!-- Est affiché quand on survole une zone  au démaragge -->
 
